--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
-    "@qdrant/js-client-rest": "^1.12.0",
+    "@qdrant/js-client-rest": "^1.13.0",
+    "@qdrant/qdrant-js": "^1.13.0",
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/jsonwebtoken": "^9.0.7",
